Fix menu item active color on mobile

--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -256,7 +256,7 @@
 @media (hover: none) and (pointer: coarse) {
   .menuItem:hover {
     color: var(--lighter-gray) !important;
-    background-color: var(--darker-gray);
+    background-color: var(--item-bg);
   }
 }
 
